[gd_scene load_steps=7 format=3 uid="uid://b8tqsnl8xq8hi"]

[ext_resource type="Script" path="res://scripts/click_system/test/TestClickSystem.gd" id="1_greq0"]
[ext_resource type="Script" path="res://scripts/click_system/test/TestClickSystemManager.gd" id="2_xhhda"]
[ext_resource type="Script" path="res://scripts/click_system/test/TestInventoryData.gd" id="5_j8nui"]
[ext_resource type="PackedScene" uid="uid://drfvlucsdw0xh" path="res://scenes/ui/HotbarUI.tscn" id="5_yk86f"]
[ext_resource type="Script" path="res://scripts/click_system/test/TestHotbarData.gd" id="6_8v8tg"]
[ext_resource type="PackedScene" uid="uid://dpoib7th7wgl5" path="res://scenes/ui/InventoryUI.tscn" id="6_caidt"]

[node name="TestClickSystem" type="Node"]
script = ExtResource("1_greq0")

[node name="TestClickSystemManager" type="Node" parent="."]
script = ExtResource("2_xhhda")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HotbarUI" parent="UI" instance=ExtResource("5_yk86f")]

[node name="Instructions" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 20.0
text = "ðŸ§ª TEST CLICK-AND-CLICK

[T] - Clic gauche sur slot 0
[Y] - Clic droit sur slot 0
[U] - Ã‰tat du systÃ¨me
[I] - Aide
[E] - Toggle inventaire"

[node name="InventoryUI" parent="UI" instance=ExtResource("6_caidt")]

[node name="InventoryData" type="Node" parent="."]

[node name="TestInventoryData" type="Node" parent="InventoryData"]
script = ExtResource("5_j8nui")

[node name="TestHotbarData" type="Node" parent="InventoryData"]
script = ExtResource("6_8v8tg")
